# SMALeadManager

./: .env.example  .gitignore  FUTURE.md  README.md  SETUP.md  config.example.yaml  pyproject.toml  requirements.txt
launchd/: com.nikhilesh.leadtracker.plist
lead_tracker/: __main__.py  cli.py  config.py  deduper.py  extractor.py  logging_setup.py  normalizer.py  parser.py  sheets.py
lead_tracker/prompts/: classifier.txt  extractor.txt
scripts/: extract_leads.py  import_json.py  leads.json
supabase/: schema.sql
tests/: test_deduper.py  test_extractor.py  test_normalizer.py  test_parser.py
tests/fixtures/: clean_structured.txt  messy_hinglish.txt  mixed_realistic.txt
web/: .env.local.example  README.md  dashboard.jsx  netlify.toml  package-lock.json  package.json
web/prototype/: README.md  all_leads.jsx  analytics.jsx  data.jsx  detail.jsx  index.html  nav.jsx  review.jsx  styles.css  ui.jsx
web/src/: middleware.ts
web/src/app/: globals.css  layout.tsx  page.tsx
web/src/app/(app)/: layout.tsx  page.tsx
web/src/app/(app)/analytics/: page.tsx
web/src/app/(app)/leads/: actions.ts  page.tsx
web/src/app/(app)/profile/: page.tsx
web/src/app/(app)/review/: actions.ts  page.tsx  review-actions.tsx
web/src/app/login/: login-form.tsx  page.tsx
web/src/components/: AppShell.tsx  BottomNav.tsx  DeleteLeadButton.tsx  LeadCard.tsx  LeadRow.tsx  QuickStatusSelect.tsx  StatusChip.tsx  TopNav.tsx
web/src/lib/: date.ts  followUpSuggester.ts  phoneFormat.ts  types.ts
web/src/lib/supabase/: middleware.ts  profile.ts  server.ts
(+11 files in other folders)
